--- a/user/build.gradle
+++ b/user/build.gradle
@@ -32,7 +32,14 @@ dependencies {
 	implementation 'org.jetbrains.kotlin:kotlin-reflect'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	runtimeOnly 'com.mysql:mysql-connector-j'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'io.kotest:kotest-runner-junit5:5.6.2'
+	testImplementation 'io.kotest:kotest-assertions-core:5.6.2'
+	testImplementation "io.mockk:mockk:1.12.0"
+	testImplementation("io.kotest:kotest-core:4.6.1")
+	testImplementation('io.kotest:kotest-assertions-core:5.5.5')
+	testImplementation('io.kotest:kotest-runner-junit5:5.5.5')
 }
 
 tasks.withType(KotlinCompile) {
