chore: Loggger 추가 및 filebeat input 수정

--- a/filebeat/filebeat.yml
+++ b/filebeat/filebeat.yml
@@ -2,7 +2,7 @@ filebeat.inputs:
   - type: log
     enabled: true
     paths:
-      - /var/log/server/req.log
+      - /var/log/server/app.log
     fields:
       topic: user-log
 
